--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "oxiaov-cli",
-  "version": "0.0.3",
+  "name": "flash-tool",
+  "version": "0.0.1",
   "license": "MIT",
   "bin": {
-    "oxiaov": "dist/bin/index.js"
+    "flash": "dist/bin/index.js"
   },
   "publishConfig": {
     "registry": "http://registry.npmjs.org/",
@@ -14,7 +14,7 @@
     "build": "rm -rf dist typings && tsc -p .",
     "lint": "eslint . --ext .ts",
     "prettier": "prettier .ts test --write",
-    "commit": "git-cz",
+    "cz": "git-cz",
     "release": "standard-version",
     "deploy": "npm run build && npm publish --access public"
   },
@@ -38,7 +38,7 @@
     "@types/node": "^14.14.37",
     "@umijs/fabric": "^2.5.7",
     "commitizen": "^4.2.3",
-    "cz-conventional-changelog": "^3.3.0",
+    "cz-conventional-changelog-emoji": "^0.1.0",
     "eslint": "^7.24.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
@@ -48,12 +48,6 @@
     "typescript": "^4.2.4"
   },
   "types": "typings/**/*.d.ts",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "lint-staged": {
     "*.ts": [
       "eslint -c .eslintrc.js",
@@ -63,7 +57,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-conventional-changelog-emoji"
     }
   },
   "commitlint": {
